/*
 * $Id: ChangeLog,v 1.509 2008-03-23 22:13:00 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-03-23 16:10 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_richeditbox.prg
    * Reverted forced repaint on ::Value and ::RichValue when control
      is inside a container.
  * source/h_windows.prg
    ! Fixed autoadjust error for internal tab pages.
  * include/i_tab.ch
  * include/i_windefs.ch
  * source/h_tab.prg
    + INVISIBLE, DISABLED and MULTILINE clauses added.

2008-03-17 18:30 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_windefs.ch
  * source/h_grid.prg
    + ::AllowChangeSize and ::AllowMoveColumn properties added.

2008-03-16 21:31 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_windows.c
    ! Fixed warning.
  * source/h_windows.prg
    ! Fixed some MDI window issues.

2008-03-15 9:11 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_print.prg
    ! fixed spaces between lines (now are DOS exactly)
  * source/h_report.prg
    ! fixed problem in option MULTIPLE graphics in second page or more.

2008-03-10 15:13 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_combo.prg
    ! Fixed incorrect LOSTFOCUS event processing via BN_KILLFOCUS.

2008-02-24 11:47 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/oohg.h
  * source/c_controlmisc.c
  * source/c_windows.c
  * source/h_windows.prg
    * Locates parent control from "windows-hidden" subcontrols.
  * source/h_combo.prg
    * Removed ::oTextBox by above changes.

2008-02-21 00:45 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_richeditbox.prg
    ! Forces repaint on ::Value and ::RichValue when control is
      inside a container.

2008-02-20 23:08 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_menu.ch
  * include/i_windefs.ch
  * source/h_menu.prg