@@ -1,11 +1,15 @@
 /*
- * $Id: ChangeLog,v 1.509 2008-03-23 22:13:00 guerra000 Exp $
+ * $Id: ChangeLog,v 1.510 2008-03-30 05:16:32 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2008-03-29 23:15 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_controlmisc.c
+    ! Fixed transparent color for grid.
 
 2008-03-23 16:10 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_richeditbox.prg
